--- a/back_end/package.json
+++ b/back_end/package.json
@@ -1,19 +1,22 @@
 {
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^0.0.1-security"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "back_end",
+  "name": "back-end",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
   "description": ""
 }
