--- a/back_end/.env
+++ b/back_end/.env
@@ -1,1 +1,6 @@
 PORT=8008
+PGHOST='ep-falling-bonus-a5kzr4jm.us-east-2.aws.neon.tech'
+PGDATABASE='expense_db'
+PGUSER='expense_db_owner'
+PGPASSWORD='r1Eh8lsoCMbV'
+ENDPOINT_ID='ep-falling-bonus-a5kzr4jm'
