--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.4",
     "next": "14.2.6",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
